crates/pgls_pretty_print/tests/snapshots/single/tests__from_expr_0_60.snap
---
source: crates/pgt_pretty_print/tests/tests.rs
input_file: crates/pgt_pretty_print/tests/data/single/from_expr_0_60.sql
snapshot_kind: text
---
SELECT * FROM t1, t2 WHERE t1.id = t2.id;
