crates/pgls_pretty_print/tests/snapshots/single/tests__func_call_within_group_filter_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/func_call_within_group_filter_0_100.sql
snapshot_kind: text
---
SELECT
  percentile_cont(
  0.75
  )
  WITHIN GROUP (ORDER BY salary DESC)
  FILTER (WHERE
    salary IS NOT NULL)
FROM
  employees;
