crates/pgls_pretty_print/tests/snapshots/single/tests__func_expr_0_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/func_expr_0.sql
snapshot_kind: text
---
SELECT lower('HELLO'), upper('world'), length('test');
