crates/pgls_pretty_print/tests/snapshots/single/tests__grant_role_stmt_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/grant_role_stmt_0_100.sql
snapshot_kind: text
---
GRANT ADMIN TO user1, user2;
